<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAnimalFormFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/amber_600"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageAddPetPicture"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginVertical="16dp"
                android:elevation="8dp"
                android:src="@drawable/ic_round_add_a_photo_24"
                app:civ_border_color="@color/gray700"
                app:civ_border_width="2dp"
                app:civ_circle_background_color="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="lollipop" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageAddPetPictureAction"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginTop="64dp"
                android:elevation="8dp"
                android:src="@drawable/ic_round_add_24"
                app:civ_border_color="@color/gray700"
                app:civ_border_width="2dp"
                app:civ_circle_background_color="@color/amber_500"
                app:layout_constraintBottom_toBottomOf="@+id/imageAddPetPicture"
                app:layout_constraintEnd_toEndOf="@+id/imageAddPetPicture"
                app:layout_constraintTop_toTopOf="@+id/imageAddPetPicture"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/textAddPetNameTitle"
                style="@style/TextTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:text="@string/titleAddPetName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageAddPetPicture" />

            <EditText
                android:id="@+id/editTextPetNameValue"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:autofillHints="petName"
                android:ems="10"
                android:hint="@string/hintEditTextPetNameValue"
                android:inputType="textPersonName"
                android:labelFor="@+id/textPetName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textAddPetNameTitle" />

            <TextView
                android:id="@+id/textSelectPetBreed"
                style="@style/TextTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:text="@string/titleSelectPetBreed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPetNameValue" />

            <Spinner
                android:id="@+id/spinnerChooseBreed"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:entries="@array/breed_array"
                android:spinnerMode="dropdown"
                android:theme="@style/SpinnerCustomTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSelectPetBreed" />

            <TextView
                android:id="@+id/textPetAgeTitle"
                style="@style/TextTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:text="@string/textPetAgeTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerChooseBreed" />

            <Spinner
                android:id="@+id/editTextPetAgeValue"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:entries="@array/years_old_array"
                android:spinnerMode="dropdown"
                android:dropDownWidth="100dp"
                android:theme="@style/SpinnerCustomTheme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textPetAgeTitle" />

            <TextView
                android:id="@+id/textPetGenderTitle"
                style="@style/TextTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:text="@string/textPetGenderTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPetAgeValue" />

            <Spinner
                android:id="@+id/spinnerPetGender"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:entries="@array/gender_array"
                android:spinnerMode="dropdown"
                android:theme="@style/SpinnerCustomTheme"
                app:layout_constraintEnd_toStartOf="@+id/spinnerPetCastration"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textPetGenderTitle" />

            <TextView
                android:id="@+id/textPetCastratedTitle"
                style="@style/TextTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textPetCastratedTitle"
                app:layout_constraintStart_toStartOf="@+id/spinnerPetCastration"
                app:layout_constraintTop_toTopOf="@+id/textPetGenderTitle" />

            <Spinner
                android:id="@+id/spinnerPetCastration"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/short_answers_array"
                android:spinnerMode="dropdown"
                android:theme="@style/SpinnerCustomTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/spinnerPetGender"
                app:layout_constraintTop_toBottomOf="@+id/textPetCastratedTitle" />

            <TextView
                android:id="@+id/textSizePetTitle"
                style="@style/TextTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:text="@string/textSizePetTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerPetGender" />

            <RadioGroup
                android:id="@+id/radioGroupPetTearing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSizePetTitle">

                <RadioButton
                    android:id="@+id/radioButtonSmall"
                    style="@style/RadioButtomStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioButtonSmall" />

                <RadioButton
                    android:id="@+id/radioButtonMedium"
                    style="@style/RadioButtomStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/radioButtonMedium" />

                <RadioButton
                    android:id="@+id/radioButtonBig"
                    style="@style/RadioButtomStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/radioButtonBig" />

                <RadioButton
                    android:id="@+id/radioButtonBigger"
                    style="@style/RadioButtomStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/radioButtonBigger" />
            </RadioGroup>

            <TextView
                android:id="@+id/textPetObservationsTitle"
                style="@style/TextTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:text="@string/textPetObservationsTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupPetTearing" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                style="@style/EditTextMultiLineStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="Observations"
                android:background="@color/gray200"
                android:gravity="start|top"
                android:hint="@string/hintPetObservation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textPetObservationsTitle"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a dignissim ante. Integer ante ipsum, tincidunt a blandit vel, ultrices molestie neque. " />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
